# CAPS-Language

./: .gitignore  06DDB73612B27A67BC102817318E9994  0B67E9DAE970991F74AAEE12381EEB37  0C7E1CE7767F6EE27E99EBB005F4C84D  100C34E9F814487DC6D07A39E3F8A020  14F203DF7C5DC30909DDFF1A692B3DC1  1E2C742E03DAF89CFDEC71AA845E4630  239EAAD7D17632B6C5AD6C4719B20345  23A0D49F50ED32F54D53BE72AFBB15EB  32F0EDF7FC28BAD49B6EA412F1F0F803  33903B557B4EF5D46113A3ACCF727354  3830857EA9BD5B92DCF3A59464F2E99D  38BFE6E6F362F647527E9E8CE86CF54D  3A6ED02F744035093CE644B4D73C92DE  45EAE315A5B24C1AF4462ED62BBA5021  48E2AD844A48D7B64328242931F44718  4B16A6861340D9490AFD4040DD401365  53C26AC5B6CE5367CC494D184F124022  621ACBACAFD2A929F499C5CE538E7309  65915EC330F5588F9C983EB3F081427A  67006FB8F046C1E9FAE603B214896EDF  712AAA75C524192704010A4C9944FF54  73D3DFCBAFF77DD903F39185BE779090  7436C8078C68C5BC86EE6BB47C43080C  79A244315E0C63A0EF1171CE395441A4  7E6E7D24E3A810596FA30E30A8727299  83F1FB214FB52B04CC226D84C8274319  84230D4AC440C7EE79A4366F2387DD3A  882BCFDAAAB91795CBF73252859C0276  891EE312B17F0EA013AB4ED2B7CF16E3  8C51FEC007C359F985EFD0C770B4CECB  957CEDA2B844421436776E3FBB581191  9C699142571C201A4FABFF2F378047C9  9E0B127E15EA2B97BF8EA8C645D029B3  A40D04E724C7E2FDC5649B44E5DF84B7  A51D8E8FF00D010BFEE6467C389CD598  A5C1A9D342FE50B14E2E9C6A5A117F76  A790D8A4440B18B9E42C55BDDCFE801A  AOTBackendFileTree.txt  B0C7EB674F4BE1FD296B5CDCFB7EF577  (+129 more)
Backend/: CMakeLists.txt  Docs.txt  File_tree.txt
Frontend/: docs.txt  frontend_additions1.txt
demo/: demo.caps
src/: main.cpp
src/analysis/: pipeline.cpp  pipeline.h
src/aot/: aot_codegen.cpp  aot_codegen.h  aot_ir_typed.h  aot_toolchain.cpp  aot_toolchain.h
src/ast/: ast.h
src/backend/: channel.cpp  channel.h  eval.cpp  eval.h  exec.cpp  exec.h  ir.cpp  ir.h  result.h  runtime.cpp  runtime.h  scheduler.cpp  scheduler.h  trace.cpp  trace.h  value.cpp  value.h
src/ir/: ir.h  lowering.cpp  lowering.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h
src/pretty/: ast_dump.cpp  ast_dump.h  pretty.cpp  pretty.h
src/sema/: sema.cpp  sema.h  types.cpp  types.h
src/util/: diag.cpp  diag.h  str.cpp  str.h
